--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,31 @@ body {
     font-size: 72px;
 }
 
+.container > .header > .menu {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    width: 70%;
+}
+
+.container > .header > .menu > a {
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+}
+
+.container > .header > .menu > a:hover {
+    text-decoration: underline;
+}
+
 .facebook-packages {
-    background-color: rgb(252, 57, 57);
+    background-color: white;
 }
 
 .facebook-packages > h1 {
     color: white;
+    background-color: rgb(252, 57, 57);
+    width: 100%;
     font-weight: bold;
     text-align: center;
     padding: 30px 0;
@@ -30,7 +49,7 @@ body {
 
 .facebook-packages > .row > .fb-article {
     background-color: white;
-    padding-top: 30px;
+    padding-top: 50px;
 }
 
 .facebook-packages > .row > .fb-article > h3 {
@@ -50,6 +69,7 @@ body {
     background-color: rgb(252, 57, 132);
     font-family: 'Baloo Thambi', cursive;
     border: none;
+    padding: 10px none;
 }
 
 .facebook-packages > .row > .fb-article > .btn:hover {
@@ -58,6 +78,7 @@ body {
     font-family: 'Baloo Thambi', cursive;
     color: red;
 }
+
 
 .empty-row {
     background-color: white;
@@ -69,7 +90,7 @@ body {
     text-align: center;
     background-color: white;
     color: black;
-    height: 800px;
+    height: 500px;
     padding-top: 50px;
 }
 
@@ -98,10 +119,16 @@ body {
 
   @media only screen and (max-width: 560px) {
     .about-us{
-        height: 1500px;
+        height: 3550px;
     }
 
-    .col-xs-1 {
+    .col-xs-12 {
         padding-top: 30px;
+    }
+  }
+
+  @media only screen and (max-width: 768px) {
+    .about-us{
+        height: 850px;
     }
   }
